cont-stack stage 3: the room is read, not guessed — Gauge/Gauged in the runner (worst bytes a level, measured at exhaustion), StackSwitch.more grants one margin-sized slice at a time on the exact road and switches on the count road, the fresh stack is a 1 GB platform thread on every JDK; StackRoom root (−1) + jdk22/ FFM variant (getcontext sp, pthread bounds, HotSpot guard+shadow zone in the floor: 384 KB on macOS arm64, measured); Native reads the runtime's ThreadInfo; TestContStack (10, JDK 26 green, exact road) + TestStackRoom + TestContStackNative
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01XyJb5emMoPWpsJAEFDoBos